@@ -1,6 +1,7 @@
 0.24
-  - support full-qualified table name
-  - added EXPERIMENTAL default_schema attribute
+  - support schema-qualified table name
+  - added EXPERIMENTAL default_schema attribute for postgresql not to conflict
+    same table name.
 0.23
   - DBIx::Custom::Mapper::map method support
     {value => '%<value>%'} syntax
